--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,14 +11,14 @@
     font-style: normal;
 }
 
-body{
+body {
     display: flex;
     justify-content: center;
     overflow: hidden;
     font-family: 'Inconsolada';
 }
 
-.imgbackgroung{
+.imgbackgroung {
     margin: 20px;
     width: 1000px;
     height: 700px;
@@ -29,46 +29,112 @@ body{
     overflow: hidden;
 }
 
-.img01{
+.img01 {
     width: 300px;
     position: absolute;
     left: 960px;
     top: 200px;
-    
+
 }
 
-.img02{
-    width:430px;
+.img02 {
+    width: 430px;
     left: 0px;
     margin-top: 50px;
     z-index: -1;
 }
 
-.img03{
+.img03 {
     position: absolute;
     left: 50px;
     top: 5px;
 }
 
-header{
+header {
     display: flex;
     justify-content: center;
     margin-top: 30px;
 }
 
-#imgLogo{
+#imgLogo {
     width: 190px;
+    z-index: 99;
+    position: relative;
 }
 
-.texInicial{
+.texInicial {
     margin-top: 20px;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 99;
+    position: relative;
 }
 
-.texInicial > h2{
+.texInicial>h2 {
     font-size: 40px;
+
+}
+
+.texInicial>h3 {
+    opacity: 0.6;
+    margin-top: 20px;
+    font-size: 15px;
+
+}
+
+#boxFormulario {
+    margin-top: 20px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 99;
+    position: relative;
+}
+
+#boxFormulario p {
+    opacity: 0.7;
+    font-size: 15px;
     
+}
+
+.imgUpload {
+    position: absolute;
+    left: 490px;
+    top: 47px;
+    background-color: rgba(255, 255, 255, 0.301);
+    padding: 5px;
+    border-radius: 10px;
+
+}
+
+#imageUpload {
+    display: none;
+}
+
+.labelupload{
+    z-index: 99;
+    position: relative;
+    background-color: #f0f0f017;
+    border: 2px dashed #ffffff69;
+    border-radius: 5px;
+    color: #007bff00;
+    padding-left: 250px;
+    padding-bottom: 80px;
+    cursor: pointer;
+}
+
+.info{
+    display: flex;
+    
+}
+
+.infoupload{
+    margin-top: 85px;
+}
+
+.pessoalInput{
+    margin-top: 30px;
 }
