--- a/css/index.css
+++ b/css/index.css
@@ -188,3 +188,10 @@ button:hover{
 #ingressogerado{
     display: block;
 }
+
+.main-ingresso{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 999;
+}
