--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,7 @@ body {
     background-repeat: no-repeat;
     overflow: hidden;
     z-index: 99;
-    display: none;
+    display: block;
 }
 
 .img01 {
@@ -108,7 +108,10 @@ header {
     background-color: rgba(255, 255, 255, 0.301);
     padding: 5px;
     border-radius: 10px;
-    
+    height: 40px;
+    width: 40px;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
 
 }
 
@@ -186,7 +189,7 @@ button:hover{
 
 
 #ingressogerado{
-    display: block;
+    display: none;
 }
 
 .main-ingresso{
